--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,52 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+          
+    <script
+     src="https://code.jquery.com/jquery-3.3.1.js"
+     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+     crossorigin="anonymous">
+    </script>
+    
   </head>
 
   <body>
+    
+    <!-- Dropdown Structure -->
+   <ul id="dropdown1" class="dropdown-content">
+     <li><a href="#!">出荷予定</br>（登録）</a></li>
+     <li class="divider"></li>
+     <li><a href="#!">出荷予定</br>（確定）</a></li>
+     <li class="divider"></li>
+     <li><a href="#!">出荷履歴</a></li>
+     <li class="divider"></li>
+     <li><a href="#!">登録情報</a></li>
+   </ul>
+   
+   <nav class="blue darken-3">
+     <div class="nav-wrapper">
+       <a href="#!" class="brand-logo">tameni</a>
+       <ul class="right hide-on-med-and-down">
+         <li><a href="sass.html">出荷規格</a></li>
+         <li><a href="badges.html">お問い合わせ</a></li>
+         
+         <!-- Dropdown Trigger -->
+         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">マイページ<i class="material-icons right">arrow_drop_down</i></a></li>
+         
+         <li><a href="">ログアウト</a></li>
+         
+       </ul>
+     </div>
+   </nav>
+   
     <%= yield %>
   </body>
 </html>
