--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,1 +1,5 @@
-<p>hello world</p>
+<div class="content row">
+    <% @tweets.each do |tweet| %>
+    <p><%= tweet.text %></p>
+    <% end %>
+</div>
