--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 
   <body>
     
+    <% if user_signed_in? %>
     <!-- Dropdown Structure -->
    <ul id="dropdown1" class="dropdown-content">
      <li><a href="#!">出荷予定</br>（登録）</a></li>
@@ -39,7 +40,7 @@
    
    <nav class="blue darken-3">
      <div class="nav-wrapper">
-       <a href="#!" class="brand-logo">tameni</a>
+       <a href="" class="brand-logo">tameni</a>
        <ul class="right hide-on-med-and-down">
          <li><a href="sass.html">出荷規格</a></li>
          <li><a href="badges.html">お問い合わせ</a></li>
@@ -48,6 +49,17 @@
          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">マイページ<i class="material-icons right">arrow_drop_down</i></a></li>
          
          <li><a href="">ログアウト</a></li>
+         
+         
+         <% else %>
+         <nav class="blue darken-3">
+           <div class="nav-wrapper">
+             <a href="#!" class="brand-logo">tameni</a>
+             <ul class="right hide-on-med-and-down">
+               <li><%= link_to "新規登録", new_user_registration_path, class: 'post' %></li>
+               <li><%= link_to "ログイン", new_user_session_path, class: 'posy' %></li>
+         <% end %>
+               
          
        </ul>
      </div>
