--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,26 +35,26 @@
      <li class="divider"></li>
      <li><a href="#!">出荷履歴</a></li>
      <li class="divider"></li>
-     <li><a href="#!">登録情報</a></li>
+     <li><%= link_to "登録情報", user_path(current_user), method: :get %></li>
    </ul>
    
    <nav class="blue darken-3">
      <div class="nav-wrapper">
-       <a href="" class="brand-logo">tameni</a>
+       <a href="/" class="brand-logo">tameni</a>
        <ul class="right hide-on-med-and-down">
          <li><a href="sass.html">出荷規格</a></li>
          <li><a href="badges.html">お問い合わせ</a></li>
          
          <!-- Dropdown Trigger -->
-         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">マイページ<i class="material-icons right">arrow_drop_down</i></a></li>
+         <li><a class="dropdown-button", data-activates="dropdown1">マイページ<i class="material-icons right">arrow_drop_down</i></a></li>
          
-         <li><a href="">ログアウト</a></li>
+         <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
          
          
          <% else %>
          <nav class="blue darken-3">
            <div class="nav-wrapper">
-             <a href="#!" class="brand-logo">tameni</a>
+             <a href="/" class="brand-logo">tameni</a>
              <ul class="right hide-on-med-and-down">
                <li><%= link_to "新規登録", new_user_registration_path, class: 'post' %></li>
                <li><%= link_to "ログイン", new_user_session_path, class: 'posy' %></li>
