--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   
-  <%= form_tag('/tweeets', class: "col s12", method: :post) do %>
+  <%= form_tag('/tweets', class: "col s12", method: :post) do %>
     
       <div class="row">
         <div class="input-field col s12">
@@ -21,3 +21,5 @@
       </div>
      
   </div>
+  
+  
