--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,29 @@
         <p>mail</p>
         <h2><%= "#{@user.email}" %></h2>
         
-        
+        <div class="content1">
+            <p><%= @user.name %>さんの出荷予定(未確定)</p>
+             <table>
+        <thead>
+          <tr>
+              <th>品目</th>
+              <th>数量(pc)/日</th>
+              <th>出荷開始日</th>
+              <th>出荷終了日</th>
+          </tr>
+        </thead>
+  
+   <% @tweets.each do |tweet| %>
+      <%= render partial: "tweets/tweet", locals: { tweet: tweet} %>
+      
+   <% end %>
+   
+   
+   
+    
+    </table>
+    
+</div>
+        <%= paginate(@tweets) %>
     <!--</div>-->
 </div>
