--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -1,7 +1,6 @@
 <div class="content4">
      
         <p>品目</p>
-        <h2><%= "#{@admin.menu}" %></h2>
-        <p>詳細</p>
-        <h2><%= "#{@admin.detail}" %></h2>
+        <h2><%= @admins %></h2>
+        
 </div>
