--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,11 @@
   </head>
 
   <body>
+      
+      <!--フラッシュメッセージ-->
+      <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+      <% end %>
     
     <% if user_signed_in? %>
     <!-- Dropdown Structure -->
