--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
            <% if current_user.id == 1 %>
          <li><a href="/admins/new">出荷規格（投稿）</a></li>
          <% end %>
-         <li><a href="/admins/show">出荷規格</a></li>
+         <li><a href="/admins">出荷規格</a></li>
          <li><a href="badges.html">お問い合わせ</a></li>
          
          <!-- Dropdown Trigger -->
