--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -7,8 +7,11 @@
       <td><%= tweet.quantity %></td>
       <td><%= tweet.start_year %>年<%= tweet.start_month %>月<%= tweet.start_day %></td>
       <td><%= tweet.end_year %>年<%= tweet.end_month %>月<%= tweet.end_day %></td>
+      <td><%= link_to '削除', "/tweets/#{tweet.id}", method: :delete, class: "waves-effect waves-light btn", data: { confirm: '削除しますか？' } %></td>
     </tr>
   </tbody>
+  
+  
         
 </div>
       
