検索機能　途中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,7 @@
          <% end %>
          <li><a href="/admins">出荷規格</a></li>
          <li><a href="badges.html">お問い合わせ</a></li>
+         <li><a href="/tweets/search">検索</a></li>
          
          <!-- Dropdown Trigger -->
          <li><a class="dropdown-button", data-activates="dropdown1">マイページ<i class="material-icons right">arrow_drop_down</i></a></li>
