出荷規格の画像表示(完了)

--- a/app/views/admins/_admin.html.erb
+++ b/app/views/admins/_admin.html.erb
@@ -3,7 +3,11 @@
     <tr>
       <td><%= admin.menu %></td>
       <td><%= admin.detail %></td>
-      <td></td>
+      <td>
+          <% if admin.image.attached? %>
+            <%= image_tag admin.image %>
+          <% end %>
+      </td>
       </tr>
       </tbody>
         
