--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -1,12 +1,15 @@
 <div class="content2">
      <% @admin = Admin.new unless @admin %>
+     
+     
       
       <%= form_for(@admin) do |f| %>
       <div class="form-group file">
         <%= f.file_field :image, class: "form-control floating-label", placeholder: "画像アップロード" %>
       </div>
+      
       <%= f.label :menu %>
-      <%= f.text_field :menu %>
+      <%= f.select :menu, options_for_select([:"tomato", :"daikon"]), {include_blank: "選択してください"}, {class: "browser-default"} %>
       
       <%= f.label :detail %>
       <%= f.text_field :detail %>
