ルーティング変更(仮)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
        <a href="/" class="brand-logo">tameni</a>
        <ul class="right hide-on-med-and-down">
            <% if current_user.id == 1 %>
+           <li><a href="#!">報告済み一覧（予定）</a></li>
          <li><a href="/admins/new">出荷規格（投稿）</a></li>
          <% end %>
          <li><a href="/admins">出荷規格</a></li>
