--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -14,22 +14,22 @@
           <%= f.text_field :quantity %>
           
           <%= f.label :start_year %>
-          <%= f.text_field :start_year %>
+          <%= f.select :start_year, options_for_select(2019..2024), {include_blank: "選択してください"}, {class: "browser-default"} %>
           
           <%= f.label :start_month %>
-          <%= f.text_field :start_month %>
+          <%= f.select :start_month, options_for_select(1..12), {include_blank: "選択してください"}, {class: "browser-default"} %>
           
           <%= f.label :start_day %>
-          <%= f.text_field :start_day %>
+          <%= f.select :start_day, options_for_select(["上旬", "中旬", "下旬"]), {include_blank: "選択してください"}, {class: "browser-default"} %>
           
           <%= f.label :end_year %>
-          <%= f.text_field :end_year %>
+          <%= f.select :end_year, options_for_select(2019..2024), {include_blank: "選択してください"}, {class: "browser-default"} %>
           
           <%= f.label :end_month %>
-          <%= f.text_field :end_month %>
+          <%= f.select :end_month, options_for_select(1..12), {include_blank: "選択してください"}, {class: "browser-default"} %>
           
           <%= f.label :end_day %>
-          <%= f.text_field :end_day %>
+          <%= f.select :end_day, options_for_select(["上旬", "中旬", "下旬"]), {include_blank: "選択してください"}, {class: "browser-default"} %>
           
           
           
