--- a/app/assets/stylesheets/memos.scss
+++ b/app/assets/stylesheets/memos.scss
@@ -1,8 +1,6 @@
-// Place all the styles related to the admins controller here.
+// Place all the styles related to the memos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-
-img{
+.memo_image img{
     height: 200px;
 }
