--- a/app/views/memos/_memo.html.erb
+++ b/app/views/memos/_memo.html.erb
@@ -23,6 +23,10 @@
         
       </span>
       
+      
+      <% if memo.comments.exists? %>
+          <i class="material-icons">comment コメントあり</i>
+          <% end %>
       <div class="card-action">
          <%= link_to'詳細', "/memos/#{memo.id}",  class: "waves-effect waves-light btn" %>
          <%= link_to '削除', "/memos/#{memo.id}", method: :delete, class: "waves-effect waves-light btn", data: { confirm: '削除しますか？' } %>
