ポリモー関連(失敗)

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,13 +1,10 @@
- <div class="row">
+ <div class="tweet_index">
      
      
-              
-    <% @users.each do |user| %>
-      <%= render partial: "users/index", locals: { user: user} %>
-    <% end %>
+     
+     
+     
  </div>
-            
-            
              
   
    
