集荷表作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
    <ul id="dropdown1" class="dropdown-content">
      <li><a href="/tweets/new">出荷予定</br>（登録）</a></li>
      <li class="divider"></li>
-     <li><a href="">出荷予定</br>（確定）</a></li>
+     <li><a href="syukkas">出荷予定</br>（確定）</a></li>
      <li class="divider"></li>
      <li><a href="#!">出荷履歴</a></li>
      <li class="divider"></li>
@@ -53,6 +53,7 @@
            <li><a href="/tweets">報告済み一覧（予定）</a></li>
            <li><a href="/tweets/search">検索</a></li>
          <li><a href="/admins/new">出荷規格（投稿）</a></li>
+         <li><a href="/syukkas/new">集荷表作成</a></li>
          <% end %>
          <li><a href="/admins">出荷規格</a></li>
          <li><a href="/memos/new">お問い合わせ</a></li>
