--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,10 +1,27 @@
- <div class="tweet_index">
-     
-     
-     
-     
-     
- </div>
+ 
              
+   <div class="content1">
+    
+    <% @users.each do |user| %>
+            <p><%= user.name %>さんの出荷予定(未確定)</p>
+             <table>
+        <thead>
+          <tr>
+              <th>品目</th>
+              <th>数量(pc)/日</th>
+              <th>出荷開始日</th>
+              <th>出荷終了日</th>
+          </tr>
+        </thead>
   
+   <% @tweets.each do |tweet| %>
+      <%= render partial: "tweets/tweet", locals: { tweet: tweet} %>
+   <% end %>
+   
+  
+   
+    
+    </table>
+    <% end %>
+</div>
    
