--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
    <ul id="dropdown1" class="dropdown-content">
      <li><a href="/tweets/new">出荷予定</br>（登録）</a></li>
      <li class="divider"></li>
-     <li><a href="syukkas">出荷予定</br>（確定）</a></li>
+     <li><a href="/syukkas">出荷予定</br>（確定）</a></li>
      <li class="divider"></li>
      <li><a href="#!">出荷履歴</a></li>
      <li class="divider"></li>
@@ -50,6 +50,7 @@
        <a href="/" class="brand-logo">tameni</a>
        <ul class="right hide-on-med-and-down">
            <% if current_user.id == 1 %>
+           <li><a href="/users">生産者一覧</a></li>
            <li><a href="/tweets">報告済み一覧（予定）</a></li>
            <li><a href="/tweets/search">検索</a></li>
          <li><a href="/admins/new">出荷規格（投稿）</a></li>
