報告一覧からのリンク

--- a/app/views/chouseis/index.html.erb
+++ b/app/views/chouseis/index.html.erb
@@ -1,6 +1,7 @@
 <div class="chousei">
     
     <% @chouseis.each do |chousei| %>
-     <%= chousei.day %>
+     <p><%= chousei.day %></p>
+     <%= link_to'詳細', "/chouseis/#{chousei.id}",  class: "waves-effect waves-light btn" %>
      <% end %>
 </div>
