一括フォームの編集、削除

--- a/app/views/chouseis/create.html.erb
+++ b/app/views/chouseis/create.html.erb
@@ -4,6 +4,6 @@
       投稿が完了しました。
     </h3>
     
-    <%= link_to '一覧へ戻る', root_path %>
+    <%= link_to '納品依頼一覧へ戻る', chousei_path %>
   </div>
 </div>
