--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
    <ul id="dropdown1" class="dropdown-content">
      <li><a href="/tweets/new">出荷予定</br>（登録）</a></li>
      <li class="divider"></li>
-     <li><a href="/chouseis">出荷予定</br>（確定）</a></li>
+     <li><a href="/chouseis">納品依頼</a></li>
      <li class="divider"></li>
      <li><a href="#!">出荷履歴</a></li>
      <li class="divider"></li>
