--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -10,10 +10,10 @@
       </div>
       
       <%= f.label :title %>
-      <%= f.text_field :title%>
+      <%= f.text_field :title, placeholder: "例:大根出荷終了のお知らせ" %>
       
       <%= f.label :text %>
-      <%= f.text_field :text %>
+      <%= f.text_field :text ,placeholder: "例:大根そろそろ終了です。〇月〇日ころまで出せそうです。"%>
       
       
       
