--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,18 +1,23 @@
 <div class="row">
   
-        <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
+        
               
-             <p><%= user.name %></p>
-             <p><%= user.stage_title %></p>
-             <p><%= user.tel %></p>
-             <p><%= user.email %></p>
-             <p><%= user.address %></p>
-             <li><%= link_to "詳細", user_path(user.id), method: :get, class: "btn btn-primary withripple" %></li>
+              <tbody>
+      <tr>
+    
+    
+    <!--これ大事-->
+    <td><%= link_to user.name, user_path(user) %></td>
+    
+    
+   
+            
+             <td><%= user.stage_title %></td>
+             <td><%= user.tel %></td>
+             <td><%= user.email %></td>
+             <td><%= user.address %></td>
+            </tr>
+            </tbody>
              
-</div>
-</div>
-</div>
 </div>
       
