--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,9 @@
-<div class="row form user_profole">
+<div class="user_profile">
     <!--<div class="blue darken-3">-->
 　　　　<% if @user.image.attached? %>
         <div class="image" style="content: url(<%= rails_blob_path(@user.image) %>) "></div>
         
-        <% else %>
-        <%= form_for current_user do |f| %>
-         <h2>プロフィール画像</h2>
-        <div class="form-group file">
-        <%= f.file_field :image, class: "form-control floating-label", placeholder: "画像アップロード" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "送信", class: "btn btn-primary withripple" %>
-      </div>
-        <% end %>
+    
         <% end %>
        
         <p>名前</p>
