--- a/app/views/tweets/create.html.erb
+++ b/app/views/tweets/create.html.erb
@@ -4,6 +4,6 @@
       投稿が完了しました。
     </h3>
     
-    <%= link_to '一覧へ戻る', root_path %>
+    <%= link_to '一覧へ戻る', user_path(current_user) %>
   </div>
 </div>
