--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,9 @@
     
     <!-- Dropdown Structure -->
    <ul id="dropdown1" class="dropdown-content">
-     <li><a href="/tweets/new">出荷予定</br>（登録）</a></li>
+     <li><a href="/dayoftweets/new">出荷予定</br>（登録）</a></li>
+     <li class="divider"></li>
+     <li><a href="/dayoftweets">出荷予定</br>一覧</a></li>
      <li class="divider"></li>
      <li><a href="/chouseis">納品依頼</a></li>
      <li class="divider"></li>
@@ -52,7 +54,7 @@
            <% if current_user.id == 1 %>
            <li><a href="/users">生産者一覧</a></li>
            <li><a href="/tweets">報告済み一覧（予定）</a></li>
-           <li><a href="/tweets/search">検索</a></li>
+           <!--<li><a href="/tweets/search">検索</a></li>-->
          <li><a href="/admins/new">出荷規格（投稿）</a></li>
          <li><a href="/chouseis/new">集荷表作成</a></li>
          <% end %>
