--- a/app/views/tweets/_index.html.erb
+++ b/app/views/tweets/_index.html.erb
@@ -1,6 +1,24 @@
-
+<div class="user_all">
+  
        <% user.tweets.each do |tweet| %>
-       <p><%= tweet.menu %></p>
+       
+       <tbody>
+       <td><%= tweet.menu %></td>
+        <td><%= tweet.text %></td>
+        <td><%= tweet.quantity %></td>
+        <td><%= tweet.start_day %></td>
+        <td><%= tweet.end_month %>月<%= tweet.end_day %>日</td>
+        
+         
+          
+           
+           </tbody>
+            
+               
        
 <% end %>
+
+
+
    
+   </div>
