--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,11 +3,24 @@
    <div class="content1">
        
        <% @users.each do |user| %>
-       <%= user.name %>
+       
+       
+       <table>
+           
+           <p><%= user.name %></p>
+        <thead>
+          <tr>
+              <th>品目</th>
+              <th>品種</th>
+              <th>数量(pc)/日</th>
+              <th>出荷開始日</th>
+              <th>出荷終了日</th>
+          </tr>
+        </thead>
       <%= render partial: "tweets/index", locals: { user: user} %>
    <% end %>
        
-       
+       </table>
    
 </div>
    
