ユーザー編集へのルート変更

--- a/app/views/dayoftweets/create.html.erb
+++ b/app/views/dayoftweets/create.html.erb
@@ -4,6 +4,6 @@
       投稿が完了しました。
     </h3>
     
-    <%= link_to '登録画面へ', user_path(current_user) %>
+    <%= link_to '登録画面へ', new_tweet_path %>
   </div>
 </div>
