--- a/app/views/dayoftweets/new.html.erb
+++ b/app/views/dayoftweets/new.html.erb
@@ -14,7 +14,7 @@
           <%= f.label :month %>
           <%= f.select :day, options_for_select(1..12), {include_blank: "選択してください"}, {class: "browser-default"} %>
           
-          
+          <%= f.hidden_field :user_id %>
           
          
           
