これからvalidation、出荷依頼の表示変更をする

--- a/app/views/admins/create.html.erb
+++ b/app/views/admins/create.html.erb
@@ -4,6 +4,6 @@
       投稿が完了しました。
     </h3>
     
-    <%= link_to '一覧へ戻る', root_path %>
+    <%= link_to '出荷規格一覧へ戻る', admins_path %>
   </div>
 </div>
