--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -8,6 +8,12 @@
             <%= f.label :品目 %><br />
           <%= f.text_field :menu, placeholder: "品目", class: "form-control" %>
         </div>
+        
+        <div class="col-lg-6">
+            <%= f.label :重さ %>
+          <%= f.text_field :weight, placeholder: "重さ", class: "form-control" %>
+        </div>
+        
         <div class="col-lg-6">
             <%= f.label :詳細 %>
           <%= f.text_field :detail, placeholder: "詳細", class: "form-control" %>
