--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -5,7 +5,8 @@
         <thead>
           <tr>
               <th>品目</th>
-              <th>荷姿</th>
+              <th>重量（1pcあたり）</th>
+              <th>詳細</th>
               <th></th>
               
           </tr>
