--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -12,6 +12,9 @@
       <%= f.label :menu %>
       <%= f.select :menu, options_for_select([:"tomato", :"daikon"]), {include_blank: "選択してください"}, {class: "browser-default"} %>
       
+      <%= f.label :weight %>
+      <%= f.text_field :weight %>
+      
       <%= f.label :detail %>
       <%= f.text_field :detail %>
       
