--- a/app/views/admins/_admin.html.erb
+++ b/app/views/admins/_admin.html.erb
@@ -2,6 +2,7 @@
      <tbody>
     <tr>
       <td><%= admin.menu %></td>
+      <td><%= admin.weight %></td>
       <td><%= admin.detail %></td>
       <td>
         <div class="admin_image"></div>
