--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -1,4 +1,6 @@
 <div class="content6">
+  
+ 
 
      <% @memo = Memo.new unless @memo %>
     
@@ -20,5 +22,6 @@
       <div class="form-group">
         <%= f.submit "送信", class: "btn btn-primary withripple" %>
       </div>
+       <h5>TOPページに保存されます</h5>
       <% end %>
 </div>
