--- a/app/views/tweets/_index.html.erb
+++ b/app/views/tweets/_index.html.erb
@@ -6,7 +6,7 @@
        <td><%= tweet.menu %></td>
         <td><%= tweet.text %></td>
         <td><%= tweet.quantity %></td>
-        <td><%= tweet.start_day %></td>
+        <td><%= tweet.dayoftweet.year %>年<%= tweet.dayoftweet.day %>月<%= tweet.start_day %></td>
         <td><%= tweet.end_month %>月<%= tweet.end_day %>日</td>
         
          
